--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,17 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
-    compile 'com.mabeijianxi:small-video-record:1.2.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    //dialog
-    compile('com.afollestad.material-dialogs:core:0.9.0.2') {
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-    compile('com.afollestad.material-dialogs:commons:0.9.0.2') {
-        exclude group: 'com.android.support', module: 'support-v7'
-    }
+    compile project(':erecord')
 }
